# psiresp

./: .codecov.yml  .gitignore  .lgtm.yml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  release_history.md  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/: README.md
devtools/conda-envs/: docs_env.yaml  environment.yaml  minimal_test_env.yaml  no_qcfractal_test_env.yaml  resp_env.yaml  resp_env2.yaml  test_env.yaml  test_macOS-latest.yaml  test_ubuntu-latest.yaml  test_windows-latest.yaml  working_docs_env_mac.yaml
docs/: Makefile  README.md  Untitled.ipynb  api.rst  conf.py  index.rst  make.bat  test.py
docs/source/: .gitignore  api.rst  bibliography.bib  charge_constraints.rst  conf.py  configs.rst  conformer.rst  contributing.rst  coordinate_generation.rst  getting_started.rst  hpc.rst  index.rst  installation.rst  io.rst  molecule.rst  multiresp.rst  orientation.rst  references.bib  references.rst  resp.rst  resp2.rst  stateful.rst  usage.rst  utils.rst  vdwradii.rst
examples/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  create_record.ipynb  grid_options.ipynb  resp_prep.ipynb  save_database.py  scratch.ipynb  test.psql  test_client.py  test_mwe.py
examples/dmso/: dmso.yml
examples/input/: nme2ala2_c2_o2.json
examples/multifit/: multifit.yml
examples/output/: ethanol_c2_o1_gas_energy.json  ethanol_c2_o1_resp2_water_energy.json  methylammonium_c1_o2_gas_energy.json  nme2ala2_c1_o1_gas_energy.json  nme2ala2_c1_o3_gas_energy.json  nme2ala2_c2_o3_gas_energy.json  nme2ala2_c2_o4_gas_energy.json
examples2/: README.rst  resp_multi.ipynb
examples2/input/: methylammonium_c1_o1.json  nme2ala2_c1_o1.json  nme2ala2_c1_o2.json  nme2ala2_c1_o3.json  nme2ala2_c1_o4.json  nme2ala2_c2_o1.json  nme2ala2_c2_o4.json
examples2/output/: ethanol_c1_o1_resp2_water_energy.json  ethanol_c2_o1_resp2_gas_energy.json  methylammonium_c1_o1_gas_energy.json  (+8 more)
paper/: paper.bib  paper.md
psiresp/: __init__.py  _version.py  base.py  charge.py  charge_constraints.py  charges.py  client.py  configs.py  conformer.py  constants.py  constraint.py  due.py  exceptions.py  generators.py  grid.py  io.py  job.py  mdautils.py  mixins.py  molecule.py  moleculebase.py  molutils.py  multiresp.py  options.py  orientation.py  orutils.py  psi4utils.py  psiresp.py  qcutils.py  qm.py  rdutils.py  resp.py  resp2.py  server.py  testing.py  type_aliases.py  utils.py  vdwradii.py
psiresp/mixins/: grid.py  (+11 more)
tests/: conftest.py  datafiles.py  test_config_resp.py  test_conformer.py  test_molutils.py  test_multiresp.py  test_orientation.py  test_resp.py  test_utils.py  utils.py
(+737 files in other folders)
